--- a/output/company.html
+++ b/output/company.html
@@ -15,17 +15,15 @@
       <h1 class="ttl">運営会社</h1>
     </div>
     <div class="u-contents">
-      ```html
       <section class="tall">
         <div class="container">
-          <h2 class="u-h2">代表挨拶</h2>
           <div class="box-style01">
+            <h2 class="box-ttl">代表挨拶</h2>
             <p>現代の医療は西洋医学と薬物療法が中心です。これらの発展は世界中にはかりしれない恩恵をもたらしていますが万能ではありません。<br>「東洋医学」をうまく取り入れ、東西に偏ることなく活用することで、医療や介護の質を更に向上させることができます。</p>
             <p>弊社は昭和54年の犬山鍼灸治療所の開設以来、 地域の皆様のご支援のもと鍼灸院を母体として活動し、現在では鍼灸治療・マッサージ・デイサービス（通所介護）・居宅介護支援・漢方相談・講演活動を通じて東西医学の統合と有効利用を目指しています。</p>
           </div>
         </div>
       </section>
-
       <section class="tall">
         <div class="container">
           <h2 class="u-h2">会社概要</h2>
@@ -55,7 +53,6 @@
           </table>
         </div>
       </section>
-
       <section class="tall">
         <div class="container">
           <h2 class="u-h2">沿革</h2>
@@ -105,16 +102,19 @@
           </table>
         </div>
       </section>
-
-      <div class="l-style01">
-        <figure class="l-img"><img src="images/under/company_img01.jpg" width="800" height="590" alt=""></figure>
-        <div class="l-desc">
-          <h3 class="l-ttl">あいち女性輝きカンパニーの認証を受けました。</h3>
-          <p>女性の活躍促進に向け、トップの意識表明や採用拡大、職域拡大、育成、管理職登用のほか、ワーク・ライフ・バランスの推進や働きながら育児・介護ができる環境づくりなどの取組を行っている企業等を、愛知県が認証するものです。</p>
-          <p>（2023年12月現在1378社）</p>
+      <section class="tall">
+        <div class="container">
+          <div class="l-style01">
+            <figure class="l-img"><img src="images/under/company_img01.jpg" width="800" height="590" alt=""></figure>
+            <figure class="l-img"><img src="images/under/company_img02.jpg" width="800" height="590" alt=""></figure>
+            <div class="l-desc">
+              <h2 class="l-ttl">あいち女性輝きカンパニーの<br>認証を受けました。</h2>
+              <p>女性の活躍促進に向け、トップの意識表明や採用拡大、職域拡大、育成、管理職登用のほか、ワーク・ライフ・バランスの推進や働きながら育児・介護ができる環境づくりなどの取組を行っている企業等を、愛知県が認証するものです。</p>
+              <p>（2023年12月現在1378社）</p>
+            </div>
+          </div>
         </div>
-      </div>
-
+      </section>
       <section class="tall">
         <div class="container">
           <h2 class="u-h2">事業紹介</h2>
@@ -122,19 +122,21 @@
             <article class="item">
               <h3 class="l-ttl">デイサービスあいぎ</h3>
               <p>鍼灸院を母体とした機能訓練を得意とする通所介護事業所です。</p>
+              <a href="" class="btn-more">デイサービスあいぎ</a>
             </article>
             <article class="item">
               <h3 class="l-ttl">ケアプラン・メモリー</h3>
               <p>記憶に残るケアマネジメントを誠実に提供する居宅介護支援事業所です。</p>
+              <a href="" class="btn-more">ケアプランメモリー</a>
             </article>
             <article class="item">
               <h3 class="l-ttl">犬山鍼灸治療所</h3>
               <p>鍼灸・マッサージ・機能訓練・特別治療の予約が可能です。</p>
+              <a href="" class="btn-more">犬山鍼灸治療所</a>
             </article>
           </div>
         </div>
       </section>
-      ```
     </div>
   </main>
 </body>
