--- a/output/careplan-memory_5.html
+++ b/output/careplan-memory_5.html
@@ -15,15 +15,11 @@
       <h1 class="ttl">ケアプラン・メモリー</h1>
     </div>
     <div class="u-contents">
-      <section class="tall">
-        <div class="container">
-          <div class="tel-layout">
-            <h2 class="l-ttl">居宅介護支援事業所　ケアプラン・メモリー</h2>
-            <p class="tac"><a href="tel:0568686877" class="l-tel"><img src="images/share/icon_tel.svg" alt="TEL" width="25" height="31">0568-68-6877</a></p>
-            <p>住所：〒484-0086　愛知県犬山市松本町1丁目45番地　ハーモニービル402<br>対応地域：犬山市全域</p>
-          </div>
-        </div>
-      </section>
+      <div class="tel-layout">
+        <h2 class="l-ttl">居宅介護支援事業所　ケアプラン・メモリー</h2>
+        <p class="tac"><a href="tel:0568686877" class="l-tel"><img src="images/share/icon_tel.svg" alt="TEL" width="25" height="31">0568-68-6877</a></p>
+        <p>住所：〒484-0086　愛知県犬山市松本町1丁目45番地　ハーモニービル402<br>対応地域：犬山市全域</p>
+      </div>
       <section class="tall">
         <div class="container">
           <h2 class="u-h2">居宅介護支援事業所とは</h2>
@@ -73,8 +69,25 @@
               </tr>
             </tbody>
           </table>
-          <p>Googleマップ</p>
           <div class="google-map"></div>
+        </div>
+      </section>
+      <section class="tall">
+        <div class="container">
+          <h2 class="u-h2"></h2>
+          <section class="short">
+            <h3 class="u-h3">管理者紹介</h3>
+            <p>ケアプラン・メモリーの設立にあたり、私達が一番大切にしたのは「理念の制定」です。</p>
+            <p>“私たちは、記憶に残るケアマネジメントを誠実に提供することで、地域の皆さまに必要とされ、愛されることを大切にします”</p>
+            <p>この理念の下、「真に公正中立なケアマネジメント」「ICT活用によるゆとりある支援」「責任ある継続的なサポート」を柱に活動してまいります。<br>どうぞお気軽にご相談下さい。</p>
+            <p>木納聖子（きのうしょうこ）：介護福祉士・社会福祉士・主任介護支援専門員・修士（医療福祉学）</p>
+          </section>
+          <section class="short">
+            <div class="box-style01">
+              <h3 class="box-ttl">管理者略歴</h3>
+              <p>特別養護老人ホーム介護職員、あじさい看護福祉専門学校専任教員、国際医療福祉大学医療福祉学部医療福祉・マネジメント学科助教、犬山市犬山南地区地域包括支援センター、総合犬山中央病院犬山中央居宅介護支援事業所を経て、株式会社あいち統合医療ケアプラン・メモリー管理者就任。</p>
+            </div>
+          </section>
         </div>
       </section>
       <section class="tall">
@@ -101,21 +114,6 @@
               </tr>
             </tbody>
           </table>
-        </div>
-      </section>
-      <section class="tall">
-        <div class="container">
-          <h2 class="u-h2">管理者紹介</h2>
-          <p>ケアプラン・メモリーの設立にあたり、私達が一番大切にしたのは「理念の制定」です。</p>
-          <p>“私たちは、記憶に残るケアマネジメントを誠実に提供することで、地域の皆さまに必要とされ、愛されることを大切にします”</p>
-          <p>この理念の下、「真に公正中立なケアマネジメント」「ICT活用によるゆとりある支援」「責任ある継続的なサポート」を柱に活動してまいります。<br>どうぞお気軽にご相談下さい。</p>
-          <p>木納聖子（きのうしょうこ）：介護福祉士・社会福祉士・主任介護支援専門員・修士（医療福祉学）</p>
-          <section class="short">
-            <div class="box-style01">
-              <h3 class="box-ttl">管理者略歴</h3>
-              <p>特別養護老人ホーム介護職員、あじさい看護福祉専門学校専任教員、国際医療福祉大学医療福祉学部医療福祉・マネジメント学科助教、犬山市犬山南地区地域包括支援センター、総合犬山中央病院犬山中央居宅介護支援事業所を経て、株式会社あいち統合医療ケアプラン・メモリー管理者就任。</p>
-            </div>
-          </section>
         </div>
       </section>
     </div>
