座標にマージンを考慮する

--- a/output/dayservice-aigi_5.html
+++ b/output/dayservice-aigi_5.html
@@ -15,19 +15,14 @@
       <h1 class="ttl">デイサービスあいぎ</h1>
     </div>
     <div class="u-contents">
-      <section class="tall">
-        <div class="container">
-          <h2>通所介護事業所　デイサービスあいぎ</h2>
-          <div class="tel-layout">
-            <h2 class="l-ttl">通所介護事業所　デイサービスあいぎ</h2>
-            <p class="tac"><a href="tel:0568633930" class="l-tel"><img src="images/share/icon_tel.svg" alt="TEL" width="25" height="31">0568-63-3930</a></p>
-            <p>デイサービスあいぎは、全国でも少ない鍼灸院を母体にした通所介護事業所です。</p>
-          </div>
-          <ul class="list-anchor-link">
-            <li><a href="#link01">ケアマネージャーの方はこちら</a></li>
-          </ul>
-        </div>
-      </section>
+      <ul class="list-anchor-link">
+        <li><a href="#link01">ケアマネージャーの方はこちら</a></li>
+      </ul>
+      <div class="tel-layout">
+        <h2 class="l-ttl">通所介護事業所　デイサービスあいぎ</h2>
+        <p class="tac"><a href="tel:0568633930" class="l-tel"><img src="images/share/icon_tel.svg" alt="TEL" width="25" height="31">0568-63-3930</a></p>
+        <p>デイサービスあいぎは、全国でも少ない鍼灸院を母体にした通所介護事業所です。</p>
+      </div>
       <section class="tall">
         <div class="container">
           <h2 class="u-h2">当サービスの特長</h2>
@@ -103,11 +98,13 @@
           </div>
           <dl class="dl-style01">
             <dt>サービス提供地域</dt>
-            <dd>犬山市内在住の方<br>要介護度や利用時間、介護保険負担割合によって異なります。<br>詳細は担当のケアマネージャー様もしくはデイサービスあいぎへお問い合わせください。<br>（参考：要介護1の方で5－6時間のご利用、1割負担の場合は約820円／回です）</dd>
+            <dd>
+              <p>犬山市内在住の方</p>
+            </dd>
             <dt>利用料金</dt>
-            <dd>昼食代 580円、おやつ代 140円、日用品費 80円（以上1日につき）<br>教養娯楽費 350円（1月ごと）</dd>
+            <dd>要介護度や利用時間、介護保険負担割合によって異なります。<br>詳細は担当のケアマネージャー様もしくはデイサービスあいぎへお問い合わせください。<br>（参考：要介護1の方で5－6時間のご利用、1割負担の場合は約820円／回です）</dd>
             <dt>実費負担料金（非課税）</dt>
-            <dd>紙パンツ 165円/枚、尿パッド 55円/枚（使用時のみ）</dd>
+            <dd>昼食代 580円、おやつ代 140円、日用品費 80円（以上1日につき）<br>教養娯楽費 350円（1月ごと）<br>紙パンツ 165円/枚、尿パッド 55円/枚（使用時のみ）</dd>
             <dt>入浴</dt>
             <dd>本事業所はリハビリ中心プログラムのため入浴サービスはありません。</dd>
           </dl>
@@ -117,11 +114,11 @@
           </div>
         </div>
       </section>
-      <section class="tall" id="link01">
+      <section class="tall">
         <div class="container">
-          <h2 class="u-h2">ケアマネージャー様へ</h2>
-          <section class="short">
-            <h3 class="u-h3">2024年4月 空席状況</h3>
+          <h2 class="u-h2">デイサービスあいぎ　空き状況</h2>
+          <section class="short" id="link01">
+            <h3 class="u-h3">ケアマネージャー様へ</h3>
             <table class="table-style01">
               <colgroup>
                 <col style="width:16%">
@@ -135,7 +132,7 @@
               </colgroup>
               <tbody>
                 <tr>
-                  <th scope="col" class="tac"></th>
+                  <th scope="col" class="tac">2024年4月<br>空席状況</th>
                   <th scope="col" class="tac">月</th>
                   <th scope="col" class="tac">火</th>
                   <th scope="col" class="tac">水</th>
@@ -176,15 +173,12 @@
                 </tr>
               </tbody>
             </table>
-            <section class="x-short">
-              <h4>デイサービスあいぎ　空き状況</h4>
-              <ul class="list-disc">
-                <li>日曜日は基準緩和型サービス「健脚デイあいぎ」となり、事業対象・要支援の方のみご利用いただけます。</li>
-                <li>午後半日利用は短時間となるため、原則要介護の方はご利用頂けません。</li>
-                <li>現在、お住まいの地域によっては送迎サービスが困難な場合がありますのでご相談下さい。</li>
-                <li>▲ 定員に空きがございますが、送迎対応が困難なため、自己通所となります。</li>
-              </ul>
-            </section>
+            <ul class="list-disc">
+              <li>日曜日は基準緩和型サービス「健脚デイあいぎ」となり、事業対象・要支援の方のみご利用いただけます。</li>
+              <li>午後半日利用は短時間となるため、原則要介護の方はご利用頂けません。</li>
+              <li>現在、お住まいの地域によっては送迎サービスが困難な場合がありますのでご相談下さい。</li>
+              <li>▲ 定員に空きがございますが、送迎対応が困難なため、自己通所となります。</li>
+            </ul>
           </section>
           <section class="short">
             <h3 class="u-h3">デイサービスあいぎ・健脚デイあいぎ休業日について</h3>
